--- a/datecalc-joda/pom.xml
+++ b/datecalc-joda/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>net.objectlab.kit</groupId>
     <artifactId>kit-parent</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.2.0</version>
   </parent>
 
   <artifactId>datecalc-joda</artifactId>
