--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>net.objectlab.kit</groupId>
   <artifactId>objectlab-utils</artifactId>
-  <version>1.0-cs</version>
+  <version>1.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <name>ObjectLab Kit - General Utilities</name>
