cleanup and prepare for release

--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -55,5 +55,30 @@
       </plugin>
     </plugins>
   </build>
+  
+  <scm>
+    <connection>scm:svn:https://objectlabkit.svn.sourceforge.net/svnroot/objectlabkit/trunk/utils</connection>
+    <developerConnection>scm:svn:https://objectlabkit.svn.sourceforge.net/svnroot/objectlabkit/trunk/utils</developerConnection>
+    <url>http://objectlabkit.svn.sourceforge.net/viewvc/objectlabkit/</url>
+  </scm>
+
+  <issueManagement>
+    <system>sourceforge</system>
+    <url>https://sourceforge.net/tracker/?group_id=175139</url>
+  </issueManagement>
+
+  <distributionManagement>
+    <repository>
+      <id>sonatype-nexus-staging</id>
+      <name>Sonatype Nexus Staging Repository</name>
+      <url>http://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+    <snapshotRepository>
+      <id>sonatype-nexus-snapshots</id>
+      <name>Sonatype Nexus Snapshots Repository</name>
+      <url>http://oss.sonatype.org/content/repositories/snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
+  
 
 </project>
