Excel gets some tests + upgrade to poi 3.8.
Upgrading poi library to latest version 3.8. This required some refactors, but it means that it works with xlsx's now too.
Adding tests for read* methods... so I think we're ready to release this module.

--- a/utils-excel/pom.xml
+++ b/utils-excel/pom.xml
@@ -13,8 +13,14 @@
   <dependencies>
     <dependency>
       <groupId>org.apache.poi</groupId>
-      <artifactId>poi</artifactId>
-      <version>3.2-FINAL</version>
+      <artifactId>poi-ooxml</artifactId>
+      <version>3.8</version>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.10</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
