Add scm url, preparing for release.

--- a/utils-excel/pom.xml
+++ b/utils-excel/pom.xml
@@ -36,5 +36,9 @@
       </plugin>
     </plugins>
   </build>
+  
+  <scm>
+    <developerConnection>scm:svn:https://objectlabkit.svn.sourceforge.net/svnroot/objectlabkit/trunk/utils-excel/</developerConnection>
+  </scm>
 
 </project>
