--- a/utils-excel/pom.xml
+++ b/utils-excel/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>net.objectlab.kit</groupId>
   <artifactId>objectlab-utils-excel</artifactId>
-  <version>1.0</version>
+  <version>1.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>ObjectLab Kit - Excel Utility</name>
@@ -37,7 +37,7 @@
   </build>
   
   <scm>
-    <developerConnection>scm:svn:https://objectlabkit.svn.sourceforge.net/svnroot/objectlabkit/tags/objectlab-utils-excel-1.0</developerConnection>
+    <developerConnection>scm:svn:https://objectlabkit.svn.sourceforge.net/svnroot/objectlabkit/trunk/utils-excel/</developerConnection>
   </scm>
   
   <issueManagement>
